add call 2 action option to web , html , video , GIF push types

--- a/appgain-sdk/sdk/src/main/res/values/strings.xml
+++ b/appgain-sdk/sdk/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">sdk</string>
     <string name="confirm">Enable</string>
     <string name="cancel">Cancel</string>
+    <string name="view">View</string>
     <array name="slug_invalid_inputs">
         <item>app</item>
         <item>prod</item>
